--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContactActivity"></activity>
+        <activity android:name=".OthersPay"></activity>
+        <activity android:name=".ImpoundPay" />
+        <activity android:name=".ImpoundStorePay" />
+        <activity android:name=".BAclampPay" />
+        <activity android:name=".ObstructionPay" />
+        <activity android:name=".TrailersPay" />
+        <activity android:name=".Vc3Pay" />
+        <activity android:name=".Vc2Pay" />
+        <activity android:name=".Vc1Pay" />
+        <activity android:name=".AccReport" />
+        <activity android:name=".Vb3Pay" />
+        <activity android:name=".Vb2Pay" />
+        <activity android:name=".Vb1Pay" />
+        <activity android:name=".V5Pay" />
+        <activity android:name=".V4Pay" />
+        <activity android:name=".V3Pay" />
+        <activity android:name=".V2Pay" />
+        <activity android:name=".V1Pay" />
+        <activity android:name=".TaxiPay" />
+        <activity android:name=".BusPay" />
+        <activity android:name=".MBusPay" />
+        <activity android:name=".MatatuPay" />
+        <activity android:name=".ContactActivity" />
         <activity android:name=".ClampActivity" />
         <activity android:name=".BreakDown" />
         <activity android:name=".DailyParking" />
