--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,34 +11,35 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".OthersPay"></activity>
-        <activity android:name=".ImpoundPay" />
-        <activity android:name=".ImpoundStorePay" />
-        <activity android:name=".BAclampPay" />
-        <activity android:name=".ObstructionPay" />
-        <activity android:name=".TrailersPay" />
-        <activity android:name=".Vc3Pay" />
-        <activity android:name=".Vc2Pay" />
-        <activity android:name=".Vc1Pay" />
-        <activity android:name=".AccReport" />
-        <activity android:name=".Vb3Pay" />
-        <activity android:name=".Vb2Pay" />
-        <activity android:name=".Vb1Pay" />
-        <activity android:name=".V5Pay" />
-        <activity android:name=".V4Pay" />
-        <activity android:name=".V3Pay" />
-        <activity android:name=".V2Pay" />
-        <activity android:name=".V1Pay" />
-        <activity android:name=".TaxiPay" />
-        <activity android:name=".BusPay" />
-        <activity android:name=".MBusPay" />
-        <activity android:name=".MatatuPay" />
-        <activity android:name=".ContactActivity" />
-        <activity android:name=".ClampActivity" />
-        <activity android:name=".BreakDown" />
-        <activity android:name=".DailyParking" />
-        <activity android:name=".BusParking" />
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".Clamping.OthersPay"></activity>
+        <activity android:name=".Clamping.ImpoundPay" />
+        <activity android:name=".Clamping.ImpoundStorePay" />
+        <activity android:name=".Clamping.BAclampPay" />
+        <activity android:name=".Clamping.ObstructionPay" />
+        <activity android:name=".Clamping.TrailersPay" />
+        <activity android:name=".Clamping.Vc3Pay" />
+        <activity android:name=".Clamping.Vc2Pay" />
+        <activity android:name=".Clamping.Vc1Pay" />
+        <activity android:name=".Breakdwn.AccReport" />
+        <activity android:name=".Breakdwn.Vb3Pay" />
+        <activity android:name=".Breakdwn.Vb2Pay" />
+        <activity android:name=".Breakdwn.Vb1Pay" />
+        <activity android:name=".DailyPrk.V5Pay" />
+        <activity android:name=".DailyPrk.V4Pay" />
+        <activity android:name=".DailyPrk.V3Pay" />
+        <activity android:name=".DailyPrk.V2Pay" />
+        <activity android:name=".DailyPrk.V1Pay" />
+        <activity android:name=".BusPrk.TaxiPay" />
+        <activity android:name=".BusPrk.BusPay" />
+        <activity android:name=".BusPrk.MBusPay" />
+        <activity android:name=".BusPrk.MatatuPay" />
+        <activity android:name=".Cont.ContactActivity" />
+        <activity android:name=".Clamping.ClampActivity" />
+        <activity android:name=".Breakdwn.BreakDown" />
+        <activity android:name=".DailyPrk.DailyParking" />
+        <activity android:name=".BusPrk.BusParking" />
         <activity android:name=".Register" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".MainActivity">
