--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.androidstudy:daraja:1.0.2'
+
+
+
 
 }
