--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.androidstudy:daraja:1.0.2'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
