--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,22 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.example.smartparking">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <dist:module dist:instant="true" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@drawable/picon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".Clamping.OthersPay"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".VehicleProfile.VehicleProf"></activity>
+        <activity android:name=".VehicleDetails.Display" />
+        <activity android:name=".VehicleDetails.VehicleDetails" />
+        <activity android:name=".Clamping.OthersPay" />
         <activity android:name=".Clamping.ImpoundPay" />
         <activity android:name=".Clamping.ImpoundStorePay" />
         <activity android:name=".Clamping.BAclampPay" />
